Fixes horizontal scroll

--- a/static/global.css
+++ b/static/global.css
@@ -58,7 +58,7 @@
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   background-color: #fff;
 }
 
